# agentsave-inferroute

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
.superpowers/sdd/briefs/: inferroute-complete-report.md
src/inferroute/: __init__.py  app.py  classifier.py  dispatcher.py  metrics.py  scoring.py
src/inferroute/adapters/: __init__.py  base.py  sglang.py  vllm.py
tests/: conftest.py  test_adapters_sglang.py  test_adapters_vllm.py  test_app.py  test_classifier.py  test_dispatcher.py  test_integration.py  test_metrics.py  test_scoring.py
