[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsave-inferroute"
version = "0.1.0"
description = "AgentSave InferRoute — PPD append-prefill routing sidecar for vLLM / SGLang (Enterprise)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/aks-builds/agentsave-inferroute"
Repository = "https://github.com/aks-builds/agentsave-inferroute"

[project.scripts]
inferroute = "inferroute.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/inferroute"]
